Fix blog link cutoff issue on Android/Chrome

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ div.linkout {
 	margin-bottom: 30px;
 	margin-left: auto;
 	margin-right: auto;
+	overflow: visible;
 	text-align: center;
 }
 
